# nonfig

./: .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: README.md  bench_class_comparison.py  bench_core_performance.py  bench_robust.py  bench_usage_patterns.py  check_regression.py  collect_stats.py
docs/: index.md  reference.md
examples/: README.md  demo_callable_import.py  demo_callable_import.pyi  demo_constants.py  demo_constants.pyi  demo_local_types.py  demo_local_types.pyi  demo_public_functions.py  demo_public_functions.pyi  inheritance_limitation.py  ml_pipeline.py  ml_pipeline.pyi  nested_functions.py  nested_functions.pyi  required_params_example.py  required_params_example.pyi
scripts/: verify_stubs.py
src/nonfig/: __init__.py  constraints.py  extraction.py  generation.py  loaders.py  models.py  typedefs.py
src/nonfig/cli/: generate_stubs.py  runner.py
src/nonfig/stubs/: __init__.py  generator.py  scanner.py
tests/: test_additional_coverage.py  test_boundary_conditions.py  test_circular_dependency.py  test_circular_dependency_errors.py  test_class_config.py  test_class_methods.py  test_class_simple.py  test_cli_generate_stubs.py  test_cli_robustness.py  test_concurrency.py  test_configuration.py  test_constraints.py  test_container_defaults.py  test_default_sentinel.py  test_docstring_propagation.py  test_edge_cases_empty_inputs.py  test_enum_handling.py  test_error_messages.py  test_extraction.py  test_extraction_internals.py  test_fixed_behaviors.py  test_flax_integration.py  test_inheritance.py  test_inheritance_auto.py  test_inheritance_smart.py  test_init_false_fields.py  test_jaxtyping_integration.py  test_large_scale.py  test_leaf_behavior.py  test_loaders.py  test_make_return_types.py  test_model_config_collision.py  test_models_edge_cases.py  test_multipass_scanner.py  test_nesting.py  test_pandas_integration.py  test_pascal_case_collision.py  test_recursive_make.py  test_regression_review.py  test_required_hyper.py  (+13 more)
