[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonfig"
version = "0.1.0"
description = "Automatic Pydantic config generation from function signatures with hyperparameters"
authors = [{ name = "Sencer S.", email = "nospam@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "annotated-types>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "basedpyright>=1.31.7",
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.0.0",
]

[project.scripts]
nonfig-stubgen = "nonfig.cli.generate_stubs:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nonfig*"]

[tool.setuptools.package-data]
nonfig = ["py.typed", "*.pyi"]


# ============================================================
# RUFF CONFIGURATION - MAXIMUM STRICTNESS
# ============================================================
[tool.ruff]
target-version = "py312"
line-length = 88
indent-width = 2
fix = true
show-fixes = true
preview = true  # Enable preview rules (PLR1702, etc.)

[tool.ruff.lint]
# Comprehensive rule set for strict checking
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "BLE",    # flake8-blind-except (no bare except:)
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "T20",    # flake8-print (no print statements)
    "SIM",    # flake8-simplify
    "N",      # pep8-naming
    "Q",      # flake8-quotes
    "RUF",    # Ruff-specific rules
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint (includes PLR1702: too-many-nested-blocks)
    "PERF",   # perflint (performance)
    "ANN",    # flake8-annotations
    "ARG",    # flake8-unused-arguments
    "FBT",    # flake8-boolean-trap (no boolean positional args)
    "RET",    # flake8-return
    "TCH",    # flake8-type-checking
]

ignore = [
    "E501",    # Line too long (formatter handles this)
    "S603",    # subprocess without shell=True (too strict)
    "S607",    # Starting a process with a partial path (too strict)
    "FBT",     # Allow boolean arguments (validate=True)
    "E111",    # Indentation is not a multiple of 4
    "E114",    # Indentation is not a multiple of 4 (comment)
    "ANN401",  # Allow Any type - intentionally used for dynamic typing in this codebase
    "B903",    # Allow simple classes instead of dataclasses
    "PLC0415", # Allow local imports (used for deferred imports, circular deps)
    "C901",    # Allow complex functions (existing code)
    "PLR0912", # Allow many branches (existing code)
    "PLR0911", # Allow many return statements
    "PLC2801", # Allow object.__setattr__ (needed for frozen pydantic models)
    "PERF401", # Allow for-loop appends (readability over micro-optimization)
    "TC001",   # Allow application imports outside TYPE_CHECKING (needed at runtime)
    "TC002",   # Allow third-party imports outside TYPE_CHECKING (needed at runtime)
    "TC003",   # Allow stdlib imports outside TYPE_CHECKING (needed at runtime)
    "ERA001",  # Allow commented code (false positives on descriptive comments)
    "SIM108",  # Allow if-else over ternary (readability preference)
    "PLR6201", # Allow tuple for membership tests (readability)
    "PLW3201", # __name__ and __wrapped__ ARE meaningful (functools protocol)
    "N802",    # Allow PascalCase property names like Config, Type (API design)
    "RUF043",  # Allow regex metacharacters in pytest match= (intentional)
]

# Complexity limits (anti-LLM-slop)
[tool.ruff.lint.mccabe]
max-complexity = 10  # Maximum cyclomatic complexity

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",    # Allow unused imports in __init__.py
]
"tests/**/*.py" = [
    "S101",    # Allow assert in tests
    "PLR2004", # Allow magic values in tests
    "PLR6301", # Allow test methods (pytest pattern)
    "PLR0913", # Allow many function arguments in test cases
    "PLR0917", # Allow many positional arguments in test cases
    "ANN",     # Don't require annotations in tests
    "FBT",     # Allow boolean args in tests
    "D",       # Don't require docstrings in tests
    "T201",    # Allow print statements in tests for debugging/demonstration purposes
    "TC001",   # Allow runtime imports for type checking in tests (needed for @configurable)
    "S108",    # Allow insecure temp file usage in tests
    "PLW1641", # Allow objects without __hash__ in tests
    "PLC0415", # Allow local imports in tests
    "PLC2701", # Allow import of private members in tests
    "ARG",     # Allow unused arguments in tests (often needed for mocks/fixtures)
    "ERA001",  # Allow commented-out code in tests
    "BLE001",  # Allow catching Exception in tests
    "B903",    # Allow simple classes (not dataclasses) in tests
]
"benchmarks/**/*.py" = [
    "T201",    # Allow print statements in benchmarks
    "ANN",     # Don't require annotations in benchmarks
    "S108",    # Allow insecure temporary files in benchmarks
    "ERA001",  # Allow commented-out code in benchmarks
    "RUF001",  # Allow ambiguous unicode characters (like microseconds symbol) in benchmarks
    "PLR0915", # Allow too many statements in benchmarks
]
"examples/**/*.py" = [
    "T201",    # Allow print statements in examples
    "S108",    # Allow insecure temporary files in examples
    "ERA001",  # Allow commented-out code in examples
    "RUF001",  # Allow ambiguous unicode characters (like microseconds symbol) in examples
    "F811",    # Allow redefinition of unused name (common in stubs)
]
"examples/**/*.pyi" = [
    "F811",    # Allow redefinition of unused name (common in stubs)
]
"scripts/**/*.py" = [
    "T201",    # Allow print statements in scripts
    "S",       # Allow security warnings in scripts (subprocess, etc)
]

[tool.ruff.lint.isort]
known-first-party = ["nonfig"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-type-checking]
strict = true
runtime-evaluated-decorators = ["nonfig.generation.configurable"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ============================================================
# Basedpyright CONFIGURATION - MAXIMUM STRICTNESS
# TypeScript strict mode equivalent
# ============================================================
[tool.basedpyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

# ============================================================
# IMPORT AND MODULE CHECKS
# ============================================================
reportMissingImports = true
reportMissingTypeStubs = true  # Stricter: require type stubs
reportUndefinedVariable = true
reportAssertAlwaysTrue = true
reportInvalidStringEscapeSequence = true

# ============================================================
# STRICT NULL SAFETY (like TS strictNullChecks)
# ============================================================
reportOptionalSubscript = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportAny = false  # Disabled: Any is intentionally used for dynamic typing in this codebase
reportExplicitAny = false  # Disabled: Any is intentionally used for dynamic typing
reportIgnoreCommentWithoutRule = false  # No permitir # type: ignore sin código
reportPrivateLocalImportUsage = true

# ============================================================
# TYPE COMPLETENESS (like TS noImplicitAny + strictFunctionTypes)
# ============================================================
reportMissingParameterType = true
reportMissingTypeArgument = true
reportUnknownParameterType = true
reportUnknownLambdaType = true
reportUnknownArgumentType = true   # STRICT: Enable (can be noisy)
reportUnknownVariableType = true   # STRICT: Enable (can be noisy)
reportUnknownMemberType = true     # STRICT: Enable (can be noisy)
reportUntypedFunctionDecorator = true
reportUntypedClassDecorator = true
reportUntypedBaseClass = true
reportUntypedNamedTuple = true

# ============================================================
# CLASS AND INHERITANCE CHECKS
# ============================================================
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true
reportInconsistentConstructor = true
reportUninitializedInstanceVariable = true
reportOverlappingOverload = true
reportMissingSuperCall = false  # Disabled: Simple classes with __slots__ don't need super().__init__()

# ============================================================
# CODE QUALITY (like TS noUnusedLocals + noUnusedParameters)
# ============================================================
reportPrivateUsage = true
reportConstantRedefinition = true
reportInvalidStubStatement = true
reportIncompleteStub = true
reportUnsupportedDunderAll = true
reportUnusedClass = "error"        # STRICT: Error instead of warning
reportUnusedFunction = "error"     # STRICT: Error instead of warning
reportUnusedVariable = "error"     # STRICT: Error instead of warning
reportUnusedImport = "error"       # STRICT: Error instead of warning
reportDuplicateImport = "error"    # STRICT: Error instead of warning

# ============================================================
# UNNECESSARY CODE DETECTION
# ============================================================
reportUnnecessaryIsInstance = "error"         # STRICT: Error
reportUnnecessaryCast = "error"               # STRICT: Error
reportUnnecessaryComparison = "error"         # STRICT: Error
reportUnnecessaryContains = "error"           # STRICT: Error
reportUnnecessaryTypeIgnoreComment = "error"  # STRICT: Error

# ============================================================
# FUNCTION/METHOD SIGNATURE STRICTNESS
# ============================================================
reportGeneralTypeIssues = true
reportPropertyTypeMismatch = true
reportFunctionMemberAccess = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true  # STRICT: Enable

# ============================================================
# ADDITIONAL STRICT CHECKS (Progressive Enhancement)
# ============================================================
reportImplicitOverride = true    # STRICT: Require @override decorator (Python 3.12+)
reportDeprecated = "warning"     # Warn on deprecated usage

# ============================================================
# ADDITIONAL TYPE CHECKS
# ============================================================
reportImportCycles = "warning"

# ============================================================
# EXCLUSIONS
# ============================================================
exclude = [
    "**/__pycache__",
    ".venv",
    "build",
    "dist",
    "benchmarks",
    "tests",
    "examples",  # Uses inline .pyi stubs which pyright doesn't read for local code
]

# ============================================================
# PYTEST CONFIGURATION
# ============================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-W error",  # STRICT: Treat warnings as errors (catch deprecations early)
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-fail-under=80",  # STRICT: Require 80% coverage
]
filterwarnings = [
    "error",  # Treat all warnings as errors by default
]

# ============================================================
# COVERAGE CONFIGURATION
# ============================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "@overload",
]

[dependency-groups]
dev = [
    "flowmark>=0.5.7",
]
